# cedar

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  run_benchmarks.py
.github/workflows/: documentation.yml
cedar/: __init__.py
cedar/adapters/: __init__.py  direct.py  nearest_value.py  summation.py
cedar/base/: __init__.py  adapter.py  benchmark.py  fluid.py  material.py  mesh.py  model.py  var.py
cedar/benchmarks/: __init__.py
cedar/benchmarks/flow/: __init__.py
cedar/benchmarks/thermal/: __init__.py
cedar/fluids/: __init__.py  hydrogen.py  ideal.py  parahydrogen.py
cedar/framework/: helper.py  log.py  mesh.py  problem.py  vars.py
cedar/materials/: __init__.py  constant_material.py  uc_zrc_c.py  zrc.py  zrc_c.py
cedar/models/: __init__.py
cedar/models/flow/: flow.py
cedar/models/other/: scalar_from_func.py
cedar/models/thermal/: thermal.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/_templates/: childclass.rst  function.rst
docs/source/api/: index.rst
docs/source/benchmarks/: adiabatictransient0d.rst  dirichletsteady1d.rst  index.rst  nafemstransient1d.rst  thmcase1.rst
docs/source/examples/: 01_box_thermal.rst  02_box_thermal_transient.rst  03_heated_channel.rst  04_snre_fe.rst  index.rst
examples/01_box_thermal/: 01_box_thermal.py  box_thermal.msh
examples/02_box_thermal_transient/: 02_box_thermal_transient.py
examples/03_heated_channel/: 03_heated_channel.py
examples/04_snre_fe/: 04_snre_fe.py
functions/: generate_box.py  gmsh_snre_fe_slice.py
(+226 files in other folders)
