[project]
name = "cedar"
version = "0.1.0"
description = "Computational Environment for Dyanmics Analysis of Reactor systems in space"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "meshio",
    "CoolProp",
    "sphinx",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cedar", "cedar.*"]
exclude = ["outputs", "examples"]